--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,9 @@
-remote_theme: pages-themes/minimal@v0.2.0
+remote_theme: "godalming123/minimal"
 plugins:
 - jekyll-remote-theme 
 
 include: [".well-known"]
+
+color-scheme: ["auto"]
+
+
