--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
-remote_theme: "godalming123/minimal"
+remote_theme: pages-themes/minimal@v0.2.0
 plugins:
 - jekyll-remote-theme 
 
 include: [".well-known"]
 
-color-scheme: ["auto"]
+
 
 
