--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Marco Meer - Computational Biologist
-description: Personal website showcasing my work in computational biology and biophysics
+title: Marco Meer - Computational Biophysicist
+description: Personal website 
 theme: jekyll-theme-minimal
 
 gems: [jekyll-mermaid]
