Update configuration for Jekyll site

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,6 @@
 title: Marco Meer
-description: Personal website 
+description: Personal website
 theme: jekyll-theme-minimal
-gems: [jekyll-mermaid]
 
-sass:
-  sass_dir: assets/css
+plugins:
+  - jekyll-mermaid
